@@ -1,3 +1,7 @@
+2009-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* configure.ac, console/conscfg.c: Add CONSOLE_USE_INTERRUPTS.
+
 2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
